setup api response and error structure to make it uniform
