# backend/src/core/common/dto/express-response.dto.ts
@@ -1,13 +1,1 @@
-// dto/common-response.dto.ts
-import { ApiProperty } from '@nestjs/swagger';
-
-export class CommonResponseDto<T> {
-  @ApiProperty()
-  statusCode: number;
-
-  @ApiProperty()
-  message: string;
-
-  @ApiProperty()
-  data: T;
-}
+export class CommonResponse {}
