# backend/src/core/common/types/express-response.inerface.ts
@@ -1,6 +1,0 @@
-// interfaces/common-response.interface.ts
-export interface CommonResponse<T> {
-  statusCode: number;
-  data: T;
-  message: string;
-}
