# backend/src/modules/v1/auth/auth.controller.ts
@@ -2,6 +2,7 @@ import {
   Body,
   Controller,
   Get,
+  HttpCode,
   HttpException,
   HttpStatus,
   Post,
@@ -10,88 +11,167 @@ import {
   UseGuards,
 } from '@nestjs/common';
 import { ApiResponse } from '@nestjs/swagger';
-import { UserResponse } from '@supabase/supabase-js';
 import { Response } from 'express';
-import { ErrorResponseDto } from '../../../core/common/dto/express-error-response.dto';
-import { CommonResponseDto } from '../../../core/common/dto/express-response.dto';
+import { ErrorResponse } from '../../../core/common/dto/express-error-response.dto';
 import { AuthenticatedRequest } from '../../../core/common/types/express-authenticated-request.interface';
 import { AuthorizationGuard } from '../../../guards/authorization.guard';
 import { AuthService } from './auth.service';
-import { SignUpReqBody } from './dto/signUp.dto';
+import { Login, LoginReqBody } from './dto/login.dto';
+import { Profile } from './dto/profile.dto';
+import { SignUp, SignUpReqBody } from './dto/signUp.dto';
 
 @Controller('auth')
 export class AuthController {
   constructor(private readonly authService: AuthService) {}
 
-  @Post()
+  @Post('signup')
   @ApiResponse({
     status: HttpStatus.CREATED,
     description: 'User created successfully.',
-    type: CommonResponseDto<UserResponse['data']['user']>,
+    type: SignUp,
   })
   @ApiResponse({
     status: HttpStatus.INTERNAL_SERVER_ERROR,
     description: 'Internal Server Error',
-    type: ErrorResponseDto,
+    type: ErrorResponse,
   })
   async signUp(
     @Body() body: SignUpReqBody,
     @Res({ passthrough: true }) response: Response,
-  ): Promise<CommonResponseDto<UserResponse['data']['user']>> {
+  ): Promise<SignUp> {
     try {
-      const userData = await this.authService.createNewUser(
+      const userResponse = await this.authService.createNewUser(
         body.email,
         body.password,
       );
 
+      if (userResponse?.error) {
+        throw new HttpException(
+          {
+            statusCode: HttpStatus.INTERNAL_SERVER_ERROR,
+            message: userResponse.error.message || 'User creation failed',
+            error: userResponse.error.message,
+          },
+          HttpStatus.BAD_REQUEST,
+        );
+      }
+
       response.cookie(
         'CSIM_ACCESS_TOKEN',
-        userData?.data?.session.access_token,
-        {
-          expires: new Date(userData?.data?.session.expires_at),
-        },
+        userResponse?.data?.session.access_token,
       );
       response.cookie(
         'CSIM_REFRESH_TOKEN',
-        userData?.data?.session.refresh_token,
+        userResponse?.data?.session.refresh_token,
       );
 
       return {
-        statusCode: HttpStatus.CREATED,
-        data: userData.data.user,
-        message: 'User successfully created',
+        email: userResponse.data.user.email,
+        id: userResponse.data.user.id,
+        aud: userResponse.data.user.aud,
+        created_at: userResponse.data.user.created_at,
+        updated_at: userResponse.data.user.updated_at,
+        user_metadata: userResponse.data.user.user_metadata,
       };
     } catch (error) {
       throw new HttpException(
         {
-          status: HttpStatus.INTERNAL_SERVER_ERROR,
-          error: 'Internal Server Error',
+          statusCode: HttpStatus.INTERNAL_SERVER_ERROR,
+          error: error.message || 'Error',
+          message: error.message || 'Internal server error',
         },
         HttpStatus.INTERNAL_SERVER_ERROR,
-        {
-          cause: error,
-        },
       );
     }
   }
 
-  @Get()
-  @UseGuards(AuthorizationGuard)
+  @Post('login')
+  @HttpCode(HttpStatus.OK)
   @ApiResponse({
     status: HttpStatus.OK,
-    type: CommonResponseDto<UserResponse['data']['user']>,
+    description: 'User logged in successfully.',
+    type: Login,
   })
   @ApiResponse({
     status: HttpStatus.INTERNAL_SERVER_ERROR,
-    type: ErrorResponseDto,
+    description: 'Internal Server Error',
+    type: ErrorResponse,
   })
-  async me(
-    @Req() request: AuthenticatedRequest,
-  ): Promise<CommonResponseDto<UserResponse['data']['user']>> {
+  @ApiResponse({
+    status: HttpStatus.BAD_REQUEST,
+    description: 'Bad Request',
+    type: ErrorResponse,
+  })
+  async login(
+    @Body() body: LoginReqBody,
+    @Res({ passthrough: true }) response: Response,
+  ): Promise<Login> {
+    try {
+      const userResponse = await this.authService.loginUser(
+        body.email,
+        body.password,
+      );
+
+      console.log('login', userResponse);
+
+      if (userResponse?.error) {
+        throw new HttpException(
+          {
+            statusCode: HttpStatus.INTERNAL_SERVER_ERROR,
+            message: userResponse.error.message || 'User creation failed',
+            error: userResponse.error.message,
+          },
+          HttpStatus.BAD_REQUEST,
+        );
+      }
+
+      response.cookie(
+        'CSIM_ACCESS_TOKEN',
+        userResponse?.data?.session.access_token,
+      );
+      response.cookie(
+        'CSIM_REFRESH_TOKEN',
+        userResponse?.data?.session.refresh_token,
+      );
+
+      return {
+        email: userResponse.data.user.email,
+        id: userResponse.data.user.id,
+        aud: userResponse.data.user.aud,
+        created_at: userResponse.data.user.created_at,
+        updated_at: userResponse.data.user.updated_at,
+        user_metadata: userResponse.data.user.user_metadata,
+      };
+    } catch (error) {
+      throw new HttpException(
+        {
+          statusCode: HttpStatus.INTERNAL_SERVER_ERROR,
+          error: error.message || 'Error',
+          message: error.message || 'Internal server error',
+        },
+        HttpStatus.INTERNAL_SERVER_ERROR,
+      );
+    }
+  }
+
+  @Get('profile')
+  @UseGuards(AuthorizationGuard)
+  @ApiResponse({
+    status: HttpStatus.OK,
+    type: Profile,
+  })
+  @ApiResponse({
+    status: HttpStatus.INTERNAL_SERVER_ERROR,
+    type: ErrorResponse,
+  })
+  async profile(@Req() request: AuthenticatedRequest): Promise<Profile> {
     return {
-      message: 'User',
-      data: request.user,
-      statusCode: HttpStatus.OK,
+      email: request.user.email,
+      id: request.user.id,
+      aud: request.user.aud,
+      created_at: request.user.created_at,
+      updated_at: request.user.updated_at,
+      user_metadata: request.user.user_metadata,
     };
   }
 }
